tests/sksl/errors/RedeclareBasicType.dsl.glsl
### Compilation failed:

error: expected an identifier, but found type 'int'
1 error
